--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Max | About</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body style="background-color: black;">
@@ -69,7 +69,7 @@
 
   <div class="button" style="width: 100%; text-align: center;">
 
-    <a href=""><button class="resume" style="cursor: pointer;   padding: 18px 38px;background-color: #171616; margin-bottom:122px; color: white; font-size: 19px; border-style: solid; border-color: #FDFAFA; border-width: 1px; border-radius:50px;">Here's my Resume</button></a>
+    <a href=""><button class="resume">Here's my Resume</button></a>
 
    
 
@@ -80,16 +80,37 @@
     <h2>Maxwell's Portfolio</h2><br><br>
 
     <div class="icon-container" style="display:flex; text-align: center;justify-content: center; margin-top: 50px;">
-      <div class="behance">
-          <img src="behance.png" alt="" style="height:45px ; width:45px;">
+
+      <div class="icons">
+        <i class="fa fa-behance"><i>
+        <i class="fa fa-linkedin"><i>
       </div>
-      <div class="linkedin">
-          <img src="linkedin.png" alt="" style="height:45px ; width:45px;">
+      
+        
       </div>
     </div>
   </div>
-  
 
+
+
+
+
+  
+ <!--------Javascript for  toggle menu-------->
+
+ <script>
+
+  var navLinks = document.getElementById("navLinks");
+
+  function showMenu(){
+      navLinks.style.right = "0";
+  }
+
+  function hideMenu(){
+      navLinks.style.right ="-200px"
+  }
+
+</script>
 
 </body>
 
